Fix rewards spacing

--- a/src/styles/Home/Rewards.module.scss
+++ b/src/styles/Home/Rewards.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
-	gap: 4rem 2.25rem;
+	gap: 2.25rem;
 }
 
 .banner {
